Fix the social icons in the footer on small screens

--- a/static/sass/_pattern_footer.scss
+++ b/static/sass/_pattern_footer.scss
@@ -240,6 +240,16 @@
 
   // social icons in footer
   .p-inline-list-icons {
+    @media (max-width: $breakpoint-medium) {
+      padding-left: 0;
+      margin-left: 0;
+      margin-top: 1rem;
+
+      .p-inline-list__item {
+        display: inline-block;
+      }
+    }
+
     @media only screen and (min-width: $breakpoint-medium) {
       float: right;
       padding-left: 0;
